--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,19 +91,18 @@ AppliedDefaultGraphicsPerformance=Maximum
 Compiler=VisualStudio2022
 -TargetedRHIs=PCD3D_SM5
 +TargetedRHIs=PCD3D_SM5
-+TargetedRHIs=SF_VULKAN_SM5
-DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
-MinimumOSVersion=MSOS_Vista
++TargetedRHIs=PCD3D_SM6
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
 AudioNumBuffersToEnqueue=1
 AudioMaxChannels=0
 AudioNumSourceWorkers=4
 SpatializationPlugin=Resonance Audio
+SourceDataOverridePlugin=
 ReverbPlugin=Resonance Audio
 OcclusionPlugin=Built-in Occlusion
 CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
-bUseAudioStreamCaching=False
 CacheSizeKB=0
 MaxChunkSizeOverrideKB=0
 bResampleForDevice=False
