Enabled virtual texturing.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -172,4 +172,5 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=True
 r.RayTracing.Shadows=True
 r.RayTracing.Skylight=True
+r.VirtualTextures=True
 
