Preparing final few changes.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [URL]
-GameName=BeachScene
+GameName=IslandScene
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/beach01.beach01
