--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,10 +1,11 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=93DF399F4E8193E275A127A95C5A5FB2
 ProjectName=IslandScene
-ProjectVersion=0.8
+ProjectVersion=1.0
 CompanyName=Sam Cox
 CopyrightNotice=(c) 2021-2022 Sam Cox.
 bUseBorderlessWindow=True
+Homepage=sam-cox.itch.io
 
 [StartupActions]
 bAddPacks=True
