--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,6 +92,7 @@ Compiler=VisualStudio2022
 -TargetedRHIs=PCD3D_SM5
 +TargetedRHIs=PCD3D_SM5
 +TargetedRHIs=PCD3D_SM6
++TargetedRHIs=SF_VULKAN_SM5
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
